# moveit2_asynchronous_trajectory_execution

./: README.md
docker/: Dockerfile  build.sh  run.sh
panda_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
panda_description/scene/: trays.scene
panda_description/urdf/: dual_panda.urdf.xacro  hand.xacro  panda_arm.xacro
panda_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
panda_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  panda.ros2_control.xacro  panda.srdf  panda.urdf.xacro  ros2_controllers.yaml
panda_moveit_config/launch/: move_group.launch.py  moveit.launch.py
paper_benchmarks/: CMakeLists.txt  package.xml
paper_benchmarks/include/paper_benchmarks/: benchmark_asynchronous.hpp  benchmark_baseline.hpp  benchmark_synchronous.hpp  cube_iterator.hpp  cube_selector.hpp  primitive_pick_and_place.hpp  scene.hpp
paper_benchmarks/launch/: benchmark_asynchronous.launch.py  benchmark_baseline.launch.py  benchmark_synchronous.launch.py  create_scene.launch.py  import_scene.launch.py
paper_benchmarks/src/: benchmark_asynchronous.cpp  benchmark_asynchronous_basic.cpp  benchmark_baseline.cpp  benchmark_synchronous.cpp  create_scene.cpp  primitive_pick_and_place.cpp  scene.cpp
